fix button- change to auto for z-index

--- a/frontend/src/Signuppage/Loginform.css
+++ b/frontend/src/Signuppage/Loginform.css
@@ -10,7 +10,7 @@
     top: 0;
     bottom: 0;
     height:100vh;
-    z-index: -10;
+    z-index: auto;
 }
 
 
